fix: adds word wrap

--- a/views/scss/qti/_associate.scss
+++ b/views/scss/qti/_associate.scss
@@ -19,6 +19,7 @@
             min-width: 100px;
             min-height: 30px;
             max-width: 180px;
+            word-wrap: break-word;
             .qti-block {
                 img {
                     display: flex;
